--- a/KETANG/src/static/css/common.less
+++ b/KETANG/src/static/css/common.less
@@ -14,59 +14,37 @@ html {
 /*NAV-TOP*/
 .headerNavBox {
   @BG: #2A2A2A;
-
   position: fixed;
   top: 0;
   left: 0;
   z-index: 9999;
   width: 100%;
-  height: 1.12rem;
-  line-height: 1.12rem;
-  background: @BG;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  background: #fff;
   color: #FFF;
-
   .homeBox {
     height: 100%;
-
-    .baseBox {
-      position: relative;
+    .baseBox{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 .2rem;
       height: 100%;
-
+      font-size: .4rem;
       .logo {
-        position: absolute;
-        left: .16rem;
-        top: 50%;
-        margin-top: -.31rem;
-        width: 2.1rem;
-        height: .62rem;
+        width:.6rem;
+        height: .5rem;
         font-size: 0;
         background: url("../images/logo.png") no-repeat;
         background-size: 100% 100%;
       }
-
-      .icon {
-        position: absolute;
-        right: .16rem;
-        top: 50%;
-        margin-top: -.3rem;
+      div{
+        color: #2A2A2A;
       }
-    }
-
-    .filterBox {
-      position: absolute;
-      top: 1.1rem;
-      left: 0;
-      z-index: 9999;
-      padding: 0 .56rem;
-      width: 100%;
-      background: @BG;
-
-      li {
-        line-height: 1.1rem;
-        text-align: center;
-        color: #FFF;
-        font-size: .32rem;
-        border-top: .02rem solid lighten(@BG, 20%); //=>LESS中降低颜色的方法
+      .icon {
+        color: #2A2A2A;
       }
     }
   }
@@ -79,32 +57,28 @@ html {
   bottom: 0;
   z-index: 9999;
   width: 100%;
-  height: 1.06rem;
-  line-height: 1.06rem;
+  height: 1rem;
+  line-height: 1rem;
   border-top: .02rem solid #D5D5D5;
-  background: #FFF;
-
   display: flex;
   a {
     flex: 1;
     text-align: center;
     color: #000;
-
+    background-color: #fcfcfc;
     i {
       display: block;
       margin-top: .12rem;
       font-size: .4rem;
     }
-
     span {
       display: block;
       height: .5rem;
       line-height: .5rem;
-      font-size: .32rem;
-    }
-
+      font-size: .2rem;
+    }s
     &.active {
-      color: #9D0800;
+      color: #FF483D;
       font-weight: bold;
     }
   }
@@ -113,4 +87,9 @@ html {
 /*CONTAINER*/
 .container {
   padding: 1.12rem 0 1.08rem 0;
+}
+.allBox{
+  position: fixed;
+  top: .8rem;
+  bottom: 1rem;
 }
