公共部分修改

--- a/KETANG/src/static/css/common.less
+++ b/KETANG/src/static/css/common.less
@@ -46,6 +46,11 @@ html {
       .icon {
         color: #2A2A2A;
       }
+      .inputBox{
+        background: #e8ecf0 !important;
+        width: 5.2rem;
+        border-radius: .3rem;
+      }
     }
   }
 }
@@ -76,7 +81,7 @@ html {
       height: .5rem;
       line-height: .5rem;
       font-size: .2rem;
-    }s
+    }
     &.active {
       color: #FF483D;
       font-weight: bold;
