--- a/KETANG/src/static/css/common.less
+++ b/KETANG/src/static/css/common.less
@@ -76,7 +76,7 @@ html {
       height: .5rem;
       line-height: .5rem;
       font-size: .2rem;
-    }s
+    }
     &.active {
       color: #FF483D;
       font-weight: bold;
