--- a/KETANG/src/static/css/home.less
+++ b/KETANG/src/static/css/home.less
@@ -40,3 +40,21 @@
      }
    }
  }
+
+
+ .allBox{
+  width: 100%;
+
+
+  .ant-carousel .slick-slide {
+    margin-top: 10px;
+    text-align: center;
+    overflow: hidden;
+
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+  
+ }
