--- a/KETANG/src/static/css/mydangdang.less
+++ b/KETANG/src/static/css/mydangdang.less
@@ -9,6 +9,7 @@
 
 }
 .heade-nav{
+  background: #FFF;
   height: 1rem;
  a{
    float: left;
@@ -31,9 +32,11 @@
  }
 }
 .indent{
+
   .indent_1{
-    border-top:1px solid rgba(155, 149, 165, 0.35) ;
-    border-bottom:1px solid rgba(155, 149, 165, 0.35);
+    background: #fff;
+    border-top:1px solid #eee ;
+    border-bottom:1px solid #eee;
     height: .9rem;
     width: 100%;
     padding: 0.18rem;
@@ -43,6 +46,10 @@
       color: #4d525d !important;
       display: block;
       height: 100%;
+      i{
+        line-height: .55rem;
+        float: right;
+      }
      .indent_img{
        display: inline-block;
        img{
@@ -62,6 +69,8 @@
 }
 
 .heade-nav1 {
+
+  background: #fff;
   width: 100%;
   height: 1rem;
   line-height: 1rem;
@@ -83,4 +92,7 @@
     }
 
   }
+}
+.bg{
+  padding: .2rem 0;
 }
