王淼第一次提交

--- a/KETANG/src/static/css/classify.less
+++ b/KETANG/src/static/css/classify.less
@@ -24,6 +24,7 @@
 }
 .allBox{
   width: 100%;
+  position:fixed;
   .ant-tabs-nav-wrap{
     width:80px;
   }
@@ -41,9 +42,6 @@
     justify-content: space-between;
     align-items:center;
     border:1px solid #ccc;
-    &:nth-child(2){
-      float:right;
-    }
     p{
       margin-bottom:0;
     }
