--- a/KETANG/src/static/css/classify.less
+++ b/KETANG/src/static/css/classify.less
@@ -1,3 +1,8 @@
+.ant-tabs-content{
+  background: #eff4fa;
+  height:100%;
+  padding-left:10px !important;
+}
 .headerNavBox {
   @BG: #2A2A2A;
   position: fixed;
@@ -36,17 +41,51 @@
   justify-content: space-between;
   margin-top:10px;
   & > div {
+    flex:1;
     height:100px;
     padding:5px;
     display:flex;
     justify-content: space-between;
     align-items:center;
-    border:1px solid #ccc;
+    background:#fff;
+    &:nth-child(1){
+      margin-right:10px;
+    }
     p{
       margin-bottom:0;
     }
     div{
       margin-right:10px;
+    }
+  }
+}
+// 轮播图
+.carousel{
+  width:100%;
+  div{
+    height:100px;
+    width:100%;
+  }
+  img{
+    width:100%;
+    height:100%;
+  }
+}
+// bookWrapper
+.bookWrapper{
+  padding:10px;
+  background:#fff;
+  margin-top:10px;
+  .bookDetail{
+    display: flex;
+    div{
+      width:33.333333%;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      img{
+        width:100%;
+      }
     }
   }
 }
