--- a/KETANG/src/static/css/home.less
+++ b/KETANG/src/static/css/home.less
@@ -1,7 +1,3 @@
-html,body{
-    margin-bottom: 1rem; 
-}
-
 .headerNavBox {
     @BG: #2A2A2A;
     position: fixed;
@@ -49,7 +45,6 @@ html,body{
     width: 100%;
     .ant-carousel .slick-slide {
         margin-top: 10px;
-        text-align: center;
         overflow: hidden;
         img {
             width: 100%;
@@ -58,8 +53,8 @@ html,body{
     }
 }
 
-.imgDiv{
-    img{
+.imgDiv {
+    img {
         display: block;
         width: 100%;
         height: 3rem;
@@ -136,19 +131,20 @@ html,body{
         right: .3rem;
         color: #999999;
     }
-    .style503 {
-        display: block;
-        font-size: 0;
-        height: .2rem;
-        width: 100%;
-        line-height: 0;
-        background: rgb(239, 244, 250, 1);
-    }
+}
+
+.style503 {
+    display: block;
+    font-size: 0;
+    height: .2rem;
+    width: 100%;
+    line-height: 0;
+    background: rgb(239, 244, 250, 1);
 }
 
 .journalism .ant-carousel .slick-slide {
     display: flex;
-    align-items: center
+
 }
 
 .ant-carousel-vertical {
@@ -198,5 +194,321 @@ html,body{
                 }
             }
         }
+    }
+}
+
+.brand_street1 {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    .title1 {
+        margin-top: .3rem;
+        img {
+            width: 100%;
+        }
+    }
+    .brand_list1 {
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+        overflow: hidden;
+    }
+}
+
+.seckilling-title {
+    display: block;
+    line-height: 1.7rem;
+    padding: .1rem 0 .4rem 0;
+    overflow: hidden;
+    height: auto;
+    .seckilling-content {
+        display: block;
+        overflow: hidden;
+        text-align: center;
+        font-size: 0;
+        line-height: 0;
+        .seckill_t {
+            display: inline-block;
+            -webkit-border-radius: .8333rem;
+            -moz-border-radius: .8333rem;
+            border-radius: .11rem;
+            background-color: #323232;
+            height: .4rem;
+            line-height: .4rem;
+            width: .5rem;
+            overflow: hidden;
+            text-align: center;
+            vertical-align: middle;
+            span {
+                color: #ffffff;
+                font-size: .2rem;
+                text-align: center;
+            }
+        }
+        .seckill_d {
+            display: inline-block;
+            margin: 0 .25rem;
+            text-align: center;
+            font-size: .3rem;
+            color: #323232;
+            vertical-align: middle;
+        }
+        .red {
+            background-color: #f3344a;
+        }
+        .kuan {
+            width: .96rem;
+        }
+    }
+}
+
+.seckill_t:first-child {
+    margin-left: .3rem;
+}
+
+p{margin: 0;}
+ul{margin-bottom: 0;}
+
+.card-swipe {
+         width: 100%;
+         overflow: hidden;
+        transform: translate(0px, 0px) translateZ(0px);
+        .card-slide{
+            width: 200rem;
+
+        .seckilling-box {
+            float: left;
+            width: 2.2rem !important;
+
+            a{
+                padding: 0 .21rem;
+                display: block;
+
+                .pic{
+                    margin-bottom: .3rem;
+                    img{
+                        display: block;
+                        width: 2rem;
+                        height: auto;
+                    }
+                }
+
+                .name{
+                    
+                    width: 2rem;
+                    font-size: 0.05rem;
+                    margin-top: 0.04rem;
+                    color: #323232;
+                    line-height: .27rem;
+                    height: .5rem;
+                    text-overflow: ellipsis;
+                    display:-webkit-box;
+                    -webkit-line-clamp:2;  
+                    -webkit-box-orient:vertical !important;   
+                    overflow:hidden;
+
+                   
+                }
+
+                .price{
+                    padding: .06rem 0 0 0;
+
+                    .rob{
+                        display: block;
+
+                        .num{
+                            display: block;
+                            font-size: .31rem;
+                            color: #f3344a;
+                            text-align: none !important;
+                            .iconfont{
+                                font-size: .31rem;
+                                
+                            }
+                        }
+
+                        .discount{
+                            overflow: hidden;
+                            font-size: .25rem;
+                            color: #bababa;
+                            text-decoration: line-through;
+
+                            .iconfont{
+                                font-size: .42rem;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.style513{
+    display: block;
+    width: 100%;
+    height: 2.2rem;
+
+    li{
+        display: block;
+
+        a{
+            display: block;
+
+            img{
+                display: block;
+                width: 100%;
+                height: 2.2rem;
+            }
+        }
+    }
+}
+
+.style504{
+    width: 100%;
+    height: 1.4rem;
+    overflow: hidden;
+    background-color: #ffffff;
+
+    .title{
+        position: relative;
+        background-color: #ffffff;
+        height: .9rem;
+        width: 100%;
+        overflow: hidden;
+
+        img{
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .subtitle{
+        display: block;
+        overflow: hidden;
+        height: .3rem;
+        font-size: 0;
+        line-height: 0;
+        text-align: center;
+        margin: 0 .4167rem;
+
+        li{
+            display: inline-block;
+            line-height: .3rem;
+            margin-right: .3rem;
+            &:last-child{
+                margin-right: 0;
+            }
+
+            a{
+                display: block;
+                color: #323232;
+                font-size: .25rem;
+                line-height: .3rem;
+                font-weight: 600;
+                position: relative;
+                padding-right: .7rem;
+
+                .iconfont{
+                    display: block;
+                    height: 100%;
+                    width: .7rem;
+                    line-height: .3rem;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    font-size: .27rem;
+                }
+            }
+        }
+    }
+}
+
+.style502 {
+    display: block;
+    font-size: 0;
+    height: 0;
+    width: 100%;
+    line-height: 0;
+    border-bottom: 1px solid #eff4fa;
+}
+
+
+.style515{
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    
+    li{
+        display: block;
+        float: left;
+        width: 33.3333333333%;
+
+        a{
+            display: block;
+            background-color: #ffffff;
+            position: relative;
+            height: 3.6rem;
+            overflow: hidden;
+
+            img{
+                display: block;
+                width: 100%;
+                height: 73%;
+            }
+
+            .tu100{
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+
+            .right_line{
+                background-color: #eff4fa;
+                width: 1px;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                right: 0;
+            }
+
+            .title{
+                display: block;
+                padding: .13rem 0 0 .1rem;
+                text-align: center;
+
+                b{
+                    display: block;
+                    overflow: hidden;
+                    word-break: break-all;
+                    font-weight: normal;
+                    color: #323232;
+                    font-size: .28rem;
+                }
+                i{
+                    display: block;
+                    height: .3rem;
+                    overflow: hidden;
+                    word-break: break-all;
+                    color: #9a9a9a;
+                    font-size: .24rem;
+                    margin-top: .01rem;
+                    font-style: normal;
+                }
+            }
+        }
+    }
+}
+
+.quality_1{
+    display: block;
+    margin: 0 auto;
+
+    .j_floorData{
+        display: block;
+        margin: 0 auto;
+
+        
     }
 }
