--- a/KETANG/src/static/css/home.less
+++ b/KETANG/src/static/css/home.less
@@ -133,15 +133,6 @@
     }
 }
 
-.style503 {
-    display: block;
-    font-size: 0;
-    height: .2rem;
-    width: 100%;
-    line-height: 0;
-    background: rgb(239, 244, 250, 1);
-}
-
 .journalism .ant-carousel .slick-slide {
     display: flex;
 
@@ -167,6 +158,7 @@
         margin: 0 auto;
         position: relative;
         overflow: hidden;
+        background-color: #fff;
         .ul_wrap {
             width: 100%;
             transition-timing-function: cubic-bezier(0.1, 0.57, 0.1, 1);
@@ -201,6 +193,7 @@
     display: block;
     margin: 0 auto;
     width: 100%;
+    background-color: #fff;
     .title1 {
         margin-top: .3rem;
         img {
