--- a/KETANG/src/static/css/classify.less
+++ b/KETANG/src/static/css/classify.less
@@ -33,6 +33,11 @@
   .ant-tabs-nav-wrap{
     width:80px;
   }
+  .ant-carousel{
+    .slick-slide{
+      margin-top:0;
+    }
+  }
 }
 // tabCarder
 .tabCarder{
@@ -84,7 +89,7 @@
       flex-direction: column;
       align-items: center;
       img{
-        width:100%;
+        width:80%;
       }
     }
   }
