--- a/KETANG/src/static/css/shopping.less
+++ b/KETANG/src/static/css/shopping.less
@@ -61,12 +61,12 @@ p{margin-bottom: 0}
     display:flex;
     flex-wrap: nowrap;
     align-items:center;
+    border-bottom: 1px solid #ddd;
     a{
       display:flex;
       flex-wrap: nowrap;
       align-items:center;
       color: #4e4e4e;
-      border-bottom: .01rem solid #ddd;
       padding: .2rem 0;
       margin-top: .1rem;
       &:nth-last-child(1){
